--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ cmake-build-debug/
 src/ledger/bin/
 src/ledger/debug/
 src/ledger/obj/
+src/glyphs.*
 src/goclient/vendor
 pkg/
 src/goclient/goclient
@@ -55,6 +56,4 @@ debug/app\.map
 
 debug/app\.asm
 
-bin/app\.hex
-
-bin/app\.elf
+bin/
